Add frontend service to production docker-compose

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -321,6 +321,16 @@ services:
     networks:
       - healthcare-network
 
+  frontend:
+    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/frontend:latest
+    container_name: healthcare-frontend
+    ports:
+      - "3000:80"
+    depends_on:
+      - api-gateway
+    networks:
+      - healthcare-network
+
 volumes:
   postgres_identity_data:
   postgres_patient_data:
