Optimize build times: Enable Gradle parallel builds, caching, and increase memory

--- a/patient-service/Dockerfile
+++ b/patient-service/Dockerfile
@@ -1,12 +1,19 @@
 FROM eclipse-temurin:17-jdk-jammy AS build
 WORKDIR /workspace/app
+
 COPY build.gradle settings.gradle* ./
 COPY gradlew ./
 COPY gradle gradle
 RUN chmod +x ./gradlew
-COPY . .
-ENV GRADLE_OPTS="-Xmx512m -XX:MaxMetaspaceSize=256m"
-RUN ./gradlew :patient-service:build -x test --no-daemon --max-workers=1
+
+COPY patient-service/build.gradle patient-service/
+RUN ./gradlew :patient-service:dependencies --no-daemon || true
+
+COPY patient-service/src patient-service/src
+ENV GRADLE_OPTS="-Xmx1024m -XX:MaxMetaspaceSize=512m -Dorg.gradle.caching=true -Dorg.gradle.parallel=true"
+RUN --mount=type=cache,target=/root/.gradle/caches \
+    --mount=type=cache,target=/root/.gradle/wrapper \
+    ./gradlew :patient-service:build -x test --no-daemon --build-cache --parallel
 
 FROM eclipse-temurin:17-jre-jammy
 VOLUME /tmp
