--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -230,10 +230,11 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=${{ matrix.service }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.service }}
           build-args: |
-            GRADLE_OPTS=-Xmx512m -XX:MaxMetaspaceSize=256m
+            GRADLE_OPTS=-Xmx1024m -XX:MaxMetaspaceSize=512m
+          outputs: type=image,push=true
 
   build-status:
     needs: [detect-changes, build-and-push]
