--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -1,12 +1,17 @@
 FROM eclipse-temurin:17-jdk-jammy AS build
 WORKDIR /workspace/app
+
 COPY build.gradle settings.gradle* ./
 COPY gradlew ./
 COPY gradle gradle
 RUN chmod +x ./gradlew
-COPY . .
-ENV GRADLE_OPTS="-Xmx512m -XX:MaxMetaspaceSize=256m"
-RUN ./gradlew :config-server:build -x test --no-daemon --max-workers=1
+
+COPY config-server/build.gradle config-server/
+RUN ./gradlew :config-server:dependencies --no-daemon || true
+
+COPY config-server/src config-server/src
+ENV GRADLE_OPTS="-Xmx1024m -XX:MaxMetaspaceSize=512m -Dorg.gradle.caching=true -Dorg.gradle.parallel=true"
+RUN --mount=type=cache,target=/root/.gradle/caches     --mount=type=cache,target=/root/.gradle/wrapper     ./gradlew :config-server:build -x test --no-daemon --build-cache --parallel
 
 FROM eclipse-temurin:17-jre-jammy
 VOLUME /tmp
