--- a/doctor-service/Dockerfile
+++ b/doctor-service/Dockerfile
@@ -1,14 +1,20 @@
 FROM eclipse-temurin:17-jdk-jammy AS build
 WORKDIR /workspace/app
+
 COPY build.gradle settings.gradle* ./
 COPY gradlew ./
 COPY gradle gradle
 RUN chmod +x ./gradlew
-COPY . .
-ENV GRADLE_OPTS="-Xmx512m -XX:MaxMetaspaceSize=256m"
-RUN ./gradlew :doctor-service:build -x test --no-daemon --max-workers=1
+
+COPY doctor-service/build.gradle doctor-service/
+RUN ./gradlew :doctor-service:dependencies --no-daemon || true
+
+COPY doctor-service/src doctor-service/src
+ENV GRADLE_OPTS="-Xmx1024m -XX:MaxMetaspaceSize=512m -Dorg.gradle.caching=true -Dorg.gradle.parallel=true"
+RUN --mount=type=cache,target=/root/.gradle/caches     --mount=type=cache,target=/root/.gradle/wrapper     ./gradlew :doctor-service:build -x test --no-daemon --build-cache --parallel
 
 FROM eclipse-temurin:17-jre-jammy
 VOLUME /tmp
-COPY --from=build /workspace/app/doctor-service/build/libs/*.jar app.jar
+ARG JAR_FILE=doctor-service/build/libs/*.jar
+COPY --from=build /workspace/app/${JAR_FILE} app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
