--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,6 +11,33 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: false
 
+jobs:
+  check-newer-commit:
+    runs-on: ubuntu-latest
+    outputs:
+      has-newer-commit: ${{ steps.check.outputs.has-newer }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Check for newer commits
+        id: check
+        run: |
+          CURRENT_SHA="${{ github.sha }}"
+          BRANCH="${{ github.ref_name }}"
+          
+          LATEST_SHA=$(git rev-parse origin/$BRANCH)
+          
+          if [ "$CURRENT_SHA" != "$LATEST_SHA" ]; then
+            echo "has-newer=true" >> $GITHUB_OUTPUT
+            echo "⚠️  Newer commit exists ($LATEST_SHA), will check service changes before building"
+          else
+            echo "has-newer=false" >> $GITHUB_OUTPUT
+            echo "✅ This is the latest commit, will build"
+          fi
+
 env:
   REGISTRY: ghcr.io
 
@@ -107,7 +134,7 @@ jobs:
 
   build-and-push:
     runs-on: ubuntu-latest
-    needs: detect-changes
+    needs: [detect-changes, check-newer-commit]
     permissions:
       contents: read
       packages: write
@@ -127,58 +154,98 @@ jobs:
           - service: notification-service
           - service: frontend
     steps:
-      - name: Check if service changed
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Check if service changed and if newer commit has same changes
         id: check
         run: |
+          CURRENT_SHA="${{ github.sha }}"
+          BRANCH="${{ github.ref_name }}"
+          
           if [ "${{ matrix.service }}" == "service-discovery" ]; then
             CHANGED="${{ needs.detect-changes.outputs.service-discovery }}"
             ROOT="${{ needs.detect-changes.outputs.root }}"
+            SERVICE_PATH="service-discovery"
           elif [ "${{ matrix.service }}" == "config-server" ]; then
             CHANGED="${{ needs.detect-changes.outputs.config-server }}"
             ROOT="${{ needs.detect-changes.outputs.root }}"
+            SERVICE_PATH="config-server"
           elif [ "${{ matrix.service }}" == "api-gateway" ]; then
             CHANGED="${{ needs.detect-changes.outputs.api-gateway }}"
             ROOT="${{ needs.detect-changes.outputs.root }}"
+            SERVICE_PATH="api-gateway"
           elif [ "${{ matrix.service }}" == "identity-service" ]; then
             CHANGED="${{ needs.detect-changes.outputs.identity-service }}"
             ROOT="${{ needs.detect-changes.outputs.root }}"
+            SERVICE_PATH="identity-service"
           elif [ "${{ matrix.service }}" == "patient-service" ]; then
             CHANGED="${{ needs.detect-changes.outputs.patient-service }}"
             ROOT="${{ needs.detect-changes.outputs.root }}"
+            SERVICE_PATH="patient-service"
           elif [ "${{ matrix.service }}" == "doctor-service" ]; then
             CHANGED="${{ needs.detect-changes.outputs.doctor-service }}"
             ROOT="${{ needs.detect-changes.outputs.root }}"
+            SERVICE_PATH="doctor-service"
           elif [ "${{ matrix.service }}" == "appointment-service" ]; then
             CHANGED="${{ needs.detect-changes.outputs.appointment-service }}"
             ROOT="${{ needs.detect-changes.outputs.root }}"
+            SERVICE_PATH="appointment-service"
           elif [ "${{ matrix.service }}" == "billing-service" ]; then
             CHANGED="${{ needs.detect-changes.outputs.billing-service }}"
             ROOT="${{ needs.detect-changes.outputs.root }}"
+            SERVICE_PATH="billing-service"
           elif [ "${{ matrix.service }}" == "room-service" ]; then
             CHANGED="${{ needs.detect-changes.outputs.room-service }}"
             ROOT="${{ needs.detect-changes.outputs.root }}"
+            SERVICE_PATH="room-service"
           elif [ "${{ matrix.service }}" == "equipment-service" ]; then
             CHANGED="${{ needs.detect-changes.outputs.equipment-service }}"
             ROOT="${{ needs.detect-changes.outputs.root }}"
+            SERVICE_PATH="equipment-service"
           elif [ "${{ matrix.service }}" == "notification-service" ]; then
             CHANGED="${{ needs.detect-changes.outputs.notification-service }}"
             ROOT="${{ needs.detect-changes.outputs.root }}"
+            SERVICE_PATH="notification-service"
           elif [ "${{ matrix.service }}" == "frontend" ]; then
             CHANGED="${{ needs.detect-changes.outputs.frontend }}"
             ROOT="false"
+            SERVICE_PATH="frontend"
           fi
           
-          if [ "$CHANGED" == "true" ] || [ "$ROOT" == "true" ]; then
-            echo "should_build=true" >> $GITHUB_OUTPUT
-            echo "✅ ${{ matrix.service }} has changes, will build"
-          else
+          if [ "$CHANGED" != "true" ] && [ "$ROOT" != "true" ]; then
             echo "should_build=false" >> $GITHUB_OUTPUT
             echo "⏭️  ${{ matrix.service }} has no changes, skipping build"
+            exit 0
+          fi
+          
+          if [ "${{ needs.check-newer-commit.outputs.has-newer-commit }}" == "true" ]; then
+            LATEST_SHA=$(git rev-parse origin/$BRANCH)
+            
+            if [ "$SERVICE_PATH" != "frontend" ]; then
+              if git diff --quiet $CURRENT_SHA $LATEST_SHA -- "$SERVICE_PATH/**" "build.gradle" "settings.gradle" "gradle/**"; then
+                echo "should_build=false" >> $GITHUB_OUTPUT
+                echo "⏭️  ${{ matrix.service }} changed in this commit but also in newer commit, skipping (newer will build)"
+              else
+                echo "should_build=true" >> $GITHUB_OUTPUT
+                echo "✅ ${{ matrix.service }} changed in this commit, newer commit doesn't have same changes, will build"
+              fi
+            else
+              if git diff --quiet $CURRENT_SHA $LATEST_SHA -- "$SERVICE_PATH/**"; then
+                echo "should_build=false" >> $GITHUB_OUTPUT
+                echo "⏭️  ${{ matrix.service }} changed in this commit but also in newer commit, skipping (newer will build)"
+              else
+                echo "should_build=true" >> $GITHUB_OUTPUT
+                echo "✅ ${{ matrix.service }} changed in this commit, newer commit doesn't have same changes, will build"
+              fi
+            fi
+          else
+            echo "should_build=true" >> $GITHUB_OUTPUT
+            echo "✅ ${{ matrix.service }} has changes and this is latest commit, will build"
           fi
 
-      - name: Checkout code
-        if: steps.check.outputs.should_build == 'true'
-        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         if: steps.check.outputs.should_build == 'true' && matrix.service != 'frontend'
