Add Prometheus and Grafana for monitoring: configure all services with Micrometer Prometheus, add Prometheus scraping config, and Grafana with auto-provisioned datasource

--- a/appointment-service/src/main/resources/application.yml
+++ b/appointment-service/src/main/resources/application.yml
@@ -26,3 +26,13 @@ logging:
   level:
     com.healthcare: DEBUG
 
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
+  metrics:
+    export:
+      prometheus:
+        enabled: true
