--- a/patient-service/src/main/resources/application.yml
+++ b/patient-service/src/main/resources/application.yml
@@ -28,3 +28,13 @@ logging:
     com.healthcare: DEBUG
     org.springframework.security: DEBUG
 
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
+  metrics:
+    export:
+      prometheus:
+        enabled: true
