Add platform linux/amd64 to all custom images for ARM64 compatibility

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -134,6 +134,8 @@ services:
 
   service-discovery:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/service-discovery:latest
+    platform: linux/amd64
+    platform: linux/amd64
     container_name: healthcare-service-discovery
     ports:
       - "8761:8761"
@@ -149,6 +151,7 @@ services:
 
   config-server:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/config-server:latest
+    platform: linux/amd64
     container_name: healthcare-config-server
     ports:
       - "8888:8888"
@@ -163,6 +166,7 @@ services:
 
   api-gateway:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/api-gateway:latest
+    platform: linux/amd64
     container_name: healthcare-api-gateway
     ports:
       - "8080:8080"
@@ -177,6 +181,7 @@ services:
 
   identity-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/identity-service:latest
+    platform: linux/amd64
     container_name: healthcare-identity-service
     ports:
       - "8001:8001"
@@ -196,6 +201,7 @@ services:
 
   patient-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/patient-service:latest
+    platform: linux/amd64
     container_name: healthcare-patient-service
     ports:
       - "8002:8002"
@@ -215,6 +221,7 @@ services:
 
   doctor-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/doctor-service:latest
+    platform: linux/amd64
     container_name: healthcare-doctor-service
     ports:
       - "8003:8003"
@@ -234,6 +241,7 @@ services:
 
   appointment-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/appointment-service:latest
+    platform: linux/amd64
     container_name: healthcare-appointment-service
     ports:
       - "8004:8004"
@@ -253,6 +261,7 @@ services:
 
   billing-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/billing-service:latest
+    platform: linux/amd64
     container_name: healthcare-billing-service
     ports:
       - "8005:8005"
@@ -272,6 +281,7 @@ services:
 
   room-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/room-service:latest
+    platform: linux/amd64
     container_name: healthcare-room-service
     ports:
       - "8006:8006"
@@ -291,6 +301,7 @@ services:
 
   equipment-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/equipment-service:latest
+    platform: linux/amd64
     container_name: healthcare-equipment-service
     ports:
       - "8007:8007"
@@ -310,6 +321,7 @@ services:
 
   notification-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/notification-service:latest
+    platform: linux/amd64
     container_name: healthcare-notification-service
     ports:
       - "8008:8008"
@@ -323,6 +335,7 @@ services:
 
   frontend:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/frontend:latest
+    platform: linux/amd64
     container_name: healthcare-frontend
     ports:
       - "3000:80"
