Ensure all custom images have platform linux/amd64

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -135,6 +135,7 @@ services:
   service-discovery:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/service-discovery:latest
     platform: linux/amd64
+    platform: linux/amd64
     container_name: healthcare-service-discovery
     ports:
       - "8761:8761"
@@ -150,6 +151,8 @@ services:
 
   config-server:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/config-server:latest
+    platform: linux/amd64
+    platform: linux/amd64
     container_name: healthcare-config-server
     ports:
       - "8888:8888"
@@ -163,7 +166,10 @@ services:
       - healthcare-network
 
   api-gateway:
+    platform: linux/amd64
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/api-gateway:latest
+    platform: linux/amd64
+    platform: linux/amd64
     container_name: healthcare-api-gateway
     ports:
       - "8080:8080"
@@ -176,8 +182,11 @@ services:
     networks:
       - healthcare-network
 
+    platform: linux/amd64
   identity-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/identity-service:latest
+    platform: linux/amd64
+    platform: linux/amd64
     container_name: healthcare-identity-service
     ports:
       - "8001:8001"
@@ -194,9 +203,12 @@ services:
         condition: service_healthy
     networks:
       - healthcare-network
+    platform: linux/amd64
 
   patient-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/patient-service:latest
+    platform: linux/amd64
+    platform: linux/amd64
     container_name: healthcare-patient-service
     ports:
       - "8002:8002"
@@ -212,10 +224,13 @@ services:
       service-discovery:
         condition: service_healthy
     networks:
+    platform: linux/amd64
       - healthcare-network
 
   doctor-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/doctor-service:latest
+    platform: linux/amd64
+    platform: linux/amd64
     container_name: healthcare-doctor-service
     ports:
       - "8003:8003"
@@ -230,11 +245,14 @@ services:
         condition: service_healthy
       service-discovery:
         condition: service_healthy
+    platform: linux/amd64
     networks:
       - healthcare-network
 
   appointment-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/appointment-service:latest
+    platform: linux/amd64
+    platform: linux/amd64
     container_name: healthcare-appointment-service
     ports:
       - "8004:8004"
@@ -248,12 +266,15 @@ services:
       postgres-appointment:
         condition: service_healthy
       service-discovery:
+    platform: linux/amd64
         condition: service_healthy
     networks:
       - healthcare-network
 
   billing-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/billing-service:latest
+    platform: linux/amd64
+    platform: linux/amd64
     container_name: healthcare-billing-service
     ports:
       - "8005:8005"
@@ -266,6 +287,7 @@ services:
     depends_on:
       postgres-billing:
         condition: service_healthy
+    platform: linux/amd64
       service-discovery:
         condition: service_healthy
     networks:
@@ -273,6 +295,8 @@ services:
 
   room-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/room-service:latest
+    platform: linux/amd64
+    platform: linux/amd64
     container_name: healthcare-room-service
     ports:
       - "8006:8006"
@@ -284,6 +308,7 @@ services:
       - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
     depends_on:
       postgres-room:
+    platform: linux/amd64
         condition: service_healthy
       service-discovery:
         condition: service_healthy
@@ -292,6 +317,8 @@ services:
 
   equipment-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/equipment-service:latest
+    platform: linux/amd64
+    platform: linux/amd64
     container_name: healthcare-equipment-service
     ports:
       - "8007:8007"
@@ -302,6 +329,7 @@ services:
       - SPRING_DATASOURCE_PASSWORD=postgres
       - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
     depends_on:
+    platform: linux/amd64
       postgres-equipment:
         condition: service_healthy
       service-discovery:
@@ -311,9 +339,12 @@ services:
 
   notification-service:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/notification-service:latest
+    platform: linux/amd64
+    platform: linux/amd64
     container_name: healthcare-notification-service
     ports:
       - "8008:8008"
+    platform: linux/amd64
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
@@ -324,6 +355,8 @@ services:
 
   frontend:
     image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/frontend:latest
+    platform: linux/amd64
+    platform: linux/amd64
     container_name: healthcare-frontend
     ports:
       - "3000:80"
