Trigger CI/CD: rebuild all services with latest changes

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -79,5 +79,10 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info,gateway
+        include: health,info,gateway,prometheus
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+
 
