--- a/patient-service/src/main/resources/application.yml
+++ b/patient-service/src/main/resources/application.yml
@@ -22,6 +22,8 @@ eureka:
   client:
     service-url:
       defaultZone: http://service-discovery:8761/eureka/
+  instance:
+    prefer-ip-address: true
 
 logging:
   level:
