--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -8,58 +8,49 @@ spring:
     gateway:
       routes:
         - id: identity-service
-          uri: lb://identity-service
+          uri: lb:
           predicates:
-            - Path=/api/auth/**
           filters:
             - StripPrefix=1
         - id: patient-service
-          uri: lb://patient-service
+          uri: lb:
           predicates:
-            - Path=/api/patients/**
           filters:
             - StripPrefix=1
         - id: doctor-service
-          uri: lb://doctor-service
+          uri: lb:
           predicates:
-            - Path=/api/doctors/**
           filters:
             - StripPrefix=1
         - id: appointment-service
-          uri: lb://appointment-service
+          uri: lb:
           predicates:
-            - Path=/api/appointments/**
           filters:
             - StripPrefix=1
         - id: billing-service
-          uri: lb://billing-service
+          uri: lb:
           predicates:
-            - Path=/api/billings/**
           filters:
             - StripPrefix=1
         - id: room-service
-          uri: lb://room-service
+          uri: lb:
           predicates:
-            - Path=/api/rooms/**
           filters:
             - StripPrefix=1
         - id: equipment-service
-          uri: lb://equipment-service
+          uri: lb:
           predicates:
-            - Path=/api/equipment/**
           filters:
             - StripPrefix=1
         - id: notification-service
-          uri: lb://notification-service
+          uri: lb:
           predicates:
-            - Path=/api/notifications/**
           filters:
             - StripPrefix=1
       default-filters:
         - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
       globalcors:
         corsConfigurations:
-          '[/**]':
             allowedOrigins: "*"
             allowedMethods:
               - GET
@@ -73,7 +64,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http:
 
 management:
   endpoints:
