--- a/billing-service/src/main/resources/application.yml
+++ b/billing-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: billing-service
   datasource:
-    url: jdbc:postgresql://postgres-billing:5432/healthcare_billing
+    url: jdbc:postgresql:
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
@@ -20,7 +20,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://service-discovery:8761/eureka/
+      defaultZone: http:
   instance:
     prefer-ip-address: true
 
