--- a/docker-compose-minimal.yml
+++ b/docker-compose-minimal.yml
@@ -30,7 +30,7 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8761/actuator/health"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http:
       interval: 30s
       timeout: 10s
       retries: 3
@@ -44,7 +44,7 @@ services:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http:
     depends_on:
       service-discovery:
         condition: service_healthy
@@ -60,10 +60,10 @@ services:
       - "8001:8001"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-identity:5432/healthcare_identity
+      - SPRING_DATASOURCE_URL=jdbc:postgresql:
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http:
     depends_on:
       postgres-identity:
         condition: service_healthy
