--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -133,7 +133,7 @@ services:
       retries: 5
 
   service-discovery:
-    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/service-discovery:latest
+    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/service-discovery:${IMAGE_TAG:-latest}
     platform: linux/amd64
     container_name: healthcare-service-discovery
     ports:
@@ -143,20 +143,20 @@ services:
     networks:
       - healthcare-network
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8761/actuator/health || exit 1"]
+      test: ["CMD-SHELL", "curl -f http:
       interval: 30s
       timeout: 10s
       retries: 3
 
   config-server:
-    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/config-server:latest
+    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/config-server:${IMAGE_TAG:-latest}
     platform: linux/amd64
     container_name: healthcare-config-server
     ports:
       - "8888:8888"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http:
     depends_on:
       service-discovery:
         condition: service_healthy
@@ -164,31 +164,31 @@ services:
       - healthcare-network
 
   api-gateway:
-    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/api-gateway:latest
+    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/api-gateway:${IMAGE_TAG:-latest}
     platform: linux/amd64
     container_name: healthcare-api-gateway
     ports:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http:
     depends_on:
       service-discovery:
         condition: service_healthy
     networks:
       - healthcare-network
   identity-service:
-    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/identity-service:latest
+    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/identity-service:${IMAGE_TAG:-latest}
     platform: linux/amd64
     container_name: healthcare-identity-service
     ports:
       - "8001:8001"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-identity:5432/healthcare_identity
+      - SPRING_DATASOURCE_URL=jdbc:postgresql:
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http:
     depends_on:
       postgres-identity:
         condition: service_healthy
@@ -198,17 +198,17 @@ services:
       - healthcare-network
 
   patient-service:
-    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/patient-service:latest
+    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/patient-service:${IMAGE_TAG:-latest}
     platform: linux/amd64
     container_name: healthcare-patient-service
     ports:
       - "8002:8002"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-patient:5432/healthcare_patient
+      - SPRING_DATASOURCE_URL=jdbc:postgresql:
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http:
     depends_on:
       postgres-patient:
         condition: service_healthy
@@ -218,17 +218,17 @@ services:
       - healthcare-network
 
   doctor-service:
-    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/doctor-service:latest
+    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/doctor-service:${IMAGE_TAG:-latest}
     platform: linux/amd64
     container_name: healthcare-doctor-service
     ports:
       - "8003:8003"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-doctor:5432/healthcare_doctor
+      - SPRING_DATASOURCE_URL=jdbc:postgresql:
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http:
     depends_on:
       postgres-doctor:
         condition: service_healthy
@@ -238,17 +238,17 @@ services:
       - healthcare-network
 
   appointment-service:
-    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/appointment-service:latest
+    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/appointment-service:${IMAGE_TAG:-latest}
     platform: linux/amd64
     container_name: healthcare-appointment-service
     ports:
       - "8004:8004"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-appointment:5432/healthcare_appointment
+      - SPRING_DATASOURCE_URL=jdbc:postgresql:
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http:
     depends_on:
       postgres-appointment:
         condition: service_healthy
@@ -258,17 +258,17 @@ services:
       - healthcare-network
 
   billing-service:
-    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/billing-service:latest
+    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/billing-service:${IMAGE_TAG:-latest}
     platform: linux/amd64
     container_name: healthcare-billing-service
     ports:
       - "8005:8005"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-billing:5432/healthcare_billing
+      - SPRING_DATASOURCE_URL=jdbc:postgresql:
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http:
     depends_on:
       postgres-billing:
         condition: service_healthy
@@ -278,17 +278,17 @@ services:
       - healthcare-network
 
   room-service:
-    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/room-service:latest
+    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/room-service:${IMAGE_TAG:-latest}
     platform: linux/amd64
     container_name: healthcare-room-service
     ports:
       - "8006:8006"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-room:5432/healthcare_room
+      - SPRING_DATASOURCE_URL=jdbc:postgresql:
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http:
     depends_on:
       postgres-room:
         condition: service_healthy
@@ -298,17 +298,17 @@ services:
       - healthcare-network
 
   equipment-service:
-    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/equipment-service:latest
+    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/equipment-service:${IMAGE_TAG:-latest}
     platform: linux/amd64
     container_name: healthcare-equipment-service
     ports:
       - "8007:8007"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-equipment:5432/healthcare_equipment
+      - SPRING_DATASOURCE_URL=jdbc:postgresql:
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http:
     depends_on:
       postgres-equipment:
         condition: service_healthy
@@ -318,21 +318,21 @@ services:
       - healthcare-network
 
   notification-service:
-    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/notification-service:latest
+    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/notification-service:${IMAGE_TAG:-latest}
     platform: linux/amd64
     container_name: healthcare-notification-service
     ports:
       - "8008:8008"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://service-discovery:8761/eureka/
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http:
     depends_on:
       - service-discovery
     networks:
       - healthcare-network
 
   frontend:
-    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/frontend:latest
+    image: ${REGISTRY:-ghcr.io}/${GITHUB_REPO:-aousganeh/healthcare-microservices}/frontend:${IMAGE_TAG:-latest}
     platform: linux/amd64
     container_name: healthcare-frontend
     ports:
