--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -8,43 +8,51 @@ spring:
     gateway:
       routes:
         - id: identity-service
-          uri: lb:
+          uri: lb://identity-service
           predicates:
+            - Path=/api/auth/**
           filters:
             - StripPrefix=1
         - id: patient-service
-          uri: lb:
+          uri: lb://patient-service
           predicates:
+            - Path=/api/patients/**
           filters:
             - StripPrefix=1
         - id: doctor-service
-          uri: lb:
+          uri: lb://doctor-service
           predicates:
+            - Path=/api/doctors/**
           filters:
             - StripPrefix=1
         - id: appointment-service
-          uri: lb:
+          uri: lb://appointment-service
           predicates:
+            - Path=/api/appointments/**
           filters:
             - StripPrefix=1
         - id: billing-service
-          uri: lb:
+          uri: lb://billing-service
           predicates:
+            - Path=/api/billings/**
           filters:
             - StripPrefix=1
         - id: room-service
-          uri: lb:
+          uri: lb://room-service
           predicates:
+            - Path=/api/rooms/**
           filters:
             - StripPrefix=1
         - id: equipment-service
-          uri: lb:
+          uri: lb://equipment-service
           predicates:
+            - Path=/api/equipment/**
           filters:
             - StripPrefix=1
         - id: notification-service
-          uri: lb:
+          uri: lb://notification-service
           predicates:
+            - Path=/api/notifications/**
           filters:
             - StripPrefix=1
       default-filters:
@@ -64,7 +72,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http:
+      defaultZone: http://localhost:8761/eureka/
 
 management:
   endpoints:
