feat: integrate frontend with backend APIs and add new entities
- Add Prescription and HealthMetric entities to patient-service
- Create API endpoints for prescriptions and health metrics
- Integrate frontend pages (Booking, Dashboard) with backend APIs
- Add API client with TypeScript types
- Update components to fetch real data from backend
- Add navigation links between pages

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
         - id: patient-service
           uri: lb://patient-service
           predicates:
-            - Path=/api/patients/**,/api/medical-records/**,/api/medical-conditions/**,/api/insurances/**
+            - Path=/api/patients/**,/api/medical-records/**,/api/medical-conditions/**,/api/insurances/**,/api/health-metrics/**,/api/prescriptions/**
           filters:
             - StripPrefix=1
         - id: doctor-service
