refactor: remove OAuth2 and use simple JWT authentication
- Remove OAuth2 Authorization Server
- Remove OAuth2 dependencies and configurations
- Add Email/Password login form
- Implement direct JWT token authentication
- Remove OAuth2 callback and related files
- Simplify SecurityConfig
- Update API Gateway routes

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
         - id: identity-service
           uri: lb://identity-service
           predicates:
-            - Path=/api/auth/**,/api/oauth2/**
+            - Path=/api/auth/**
           filters:
             - StripPrefix=1
         - id: patient-service
