feat: add specialization entity and management
- Create Specialization entity, repository, service, controller, and DTO
- Update Doctor entity to reference Specialization (ManyToOne)
- Add specialization endpoints to API Gateway
- Add specialization API functions to frontend
- Add specialization management to Admin Dashboard with tabs
- Update Profile page to use specialization dropdown
- Update DoctorDTO to use specializationId instead of specialization string

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
         - id: doctor-service
           uri: lb://doctor-service
           predicates:
-            - Path=/api/doctors/**
+            - Path=/api/doctors/**,/api/specializations/**
           filters:
             - StripPrefix=1
         - id: appointment-service
