feat: add Department management for admins
Backend:
- Create Department entity, DTO, Repository, Service, Controller
- Update Doctor entity to use Department entity (ManyToOne relationship)
- Update DoctorDTO to use departmentId and departmentName
- Add migration script for departments table
- Update API Gateway routes for departments

Frontend:
- Add Department interface to types
- Add Department API functions (get, create, update, delete)
- Add Departments tab to AdminDashboard
- Add Department CRUD operations in admin panel
- Update Doctor type to include departmentId and departmentName

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
         - id: doctor-service
           uri: lb://doctor-service
           predicates:
-            - Path=/api/doctors/**,/api/specializations/**
+            - Path=/api/doctors/**,/api/specializations/**,/api/departments/**
           filters:
             - StripPrefix=1
         - id: appointment-service
